# google-hash-code-RCS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs_pages.yaml  main.yml
docs/: conf.py  google_hash_code_rcs.rst  index.rst  modules.rst
google_hash_code_rcs/: classes.py
notebooks/: proj_funct.ipynb  trials.ipynb
tests/: test_classes.py
