[tool.poetry]
name = "google-hash-code-rcs"
version = "0.1.0"
description = ""
authors = ["Nicolas GOEMAN <nicolas.goemn@gmail.com>"]
readme = "README.md"
packages = [{include = "google_hash_code_rcs"}]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.semantic_release]
version_variable = [
    "google_hash_code_rcs/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
